; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-scene.c_scene_video_tick.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-scene.c_scene_video_tick.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_scene = type { %struct.obs_scene_item* }
%struct.obs_scene_item = type { %struct.obs_scene_item*, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, float)* @scene_video_tick to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @scene_video_tick(i8* %0, float %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca float, align 4
  %5 = alloca %struct.obs_scene*, align 8
  %6 = alloca %struct.obs_scene_item*, align 8
  store i8* %0, i8** %3, align 8
  store float %1, float* %4, align 4
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.obs_scene*
  store %struct.obs_scene* %8, %struct.obs_scene** %5, align 8
  %9 = load %struct.obs_scene*, %struct.obs_scene** %5, align 8
  %10 = call i32 @video_lock(%struct.obs_scene* %9)
  %11 = load %struct.obs_scene*, %struct.obs_scene** %5, align 8
  %12 = getelementptr inbounds %struct.obs_scene, %struct.obs_scene* %11, i32 0, i32 0
  %13 = load %struct.obs_scene_item*, %struct.obs_scene_item** %12, align 8
  store %struct.obs_scene_item* %13, %struct.obs_scene_item** %6, align 8
  br label %14

14:                                               ; preds = %27, %2
  %15 = load %struct.obs_scene_item*, %struct.obs_scene_item** %6, align 8
  %16 = icmp ne %struct.obs_scene_item* %15, null
  br i1 %16, label %17, label %31

17:                                               ; preds = %14
  %18 = load %struct.obs_scene_item*, %struct.obs_scene_item** %6, align 8
  %19 = getelementptr inbounds %struct.obs_scene_item, %struct.obs_scene_item* %18, i32 0, i32 1
  %20 = load i64, i64* %19, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %27

22:                                               ; preds = %17
  %23 = load %struct.obs_scene_item*, %struct.obs_scene_item** %6, align 8
  %24 = getelementptr inbounds %struct.obs_scene_item, %struct.obs_scene_item* %23, i32 0, i32 1
  %25 = load i64, i64* %24, align 8
  %26 = call i32 @gs_texrender_reset(i64 %25)
  br label %27

27:                                               ; preds = %22, %17
  %28 = load %struct.obs_scene_item*, %struct.obs_scene_item** %6, align 8
  %29 = getelementptr inbounds %struct.obs_scene_item, %struct.obs_scene_item* %28, i32 0, i32 0
  %30 = load %struct.obs_scene_item*, %struct.obs_scene_item** %29, align 8
  store %struct.obs_scene_item* %30, %struct.obs_scene_item** %6, align 8
  br label %14

31:                                               ; preds = %14
  %32 = load %struct.obs_scene*, %struct.obs_scene** %5, align 8
  %33 = call i32 @video_unlock(%struct.obs_scene* %32)
  %34 = load float, float* %4, align 4
  %35 = call i32 @UNUSED_PARAMETER(float %34)
  ret void
}

declare dso_local i32 @video_lock(%struct.obs_scene*) #1

declare dso_local i32 @gs_texrender_reset(i64) #1

declare dso_local i32 @video_unlock(%struct.obs_scene*) #1

declare dso_local i32 @UNUSED_PARAMETER(float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
